methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:12: error: not found: value setColor
  setColor(c)
  ^