methods.picture.PatternPicture.scala.code
override def run() {
  faireDess(Color.BLUE)
}

def dessine(){
  baisseBrosse()
  leveBrosse()
}

def faireDess(c:Color){
  avance(2)
  setColor(c)
  dessine()
  avance()
  left()
  avance()
  dessine()
  droite()
  avance()
  droite()
  avance()
  left()
}
